# Batcher

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: coins.rs  main.rs
